finally fixed the spacing the issue

--- a/css/test-page-styles.css
+++ b/css/test-page-styles.css
@@ -1,11 +1,14 @@
 /* $primary-color: color: #1E1A1E; */
 
 html, body {
-  height: 100%;
+  /* height: 100%; */
+  /* font-size: 1em */
 
 }
 
 .home-page {
+  display: inline-block;
+  text-align: justify;
   position: absolute;
   overflow: auto;
   width: 100%;
@@ -15,6 +18,7 @@ html, body {
 
 
 .random-text {
+
   padding: 1.25em;
   text-align: justify;
   position: relative;
@@ -22,7 +26,7 @@ html, body {
   font-family: 'Noto Sans SC', sans-serif;
   font-size: 2em;
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
   word-wrap: break-word;
   letter-spacing: 10px;
 }
@@ -43,9 +47,16 @@ div a:hover,
   text-align: right;
   color: #1E1A1E !important;
   text-decoration: none;
-  
+
 }
 
 .test-button {
     position: fixed;
+}
+
+span {
+  width: 100%;
+  background-color: red;
+  display: inline-block;
+  height: 1em;
 }
